# Russian-EGE-Bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  test_task1_validation.py
.github/workflows/: ci.yml  publish-docker.yml
migrations/: env.py  script.py.mako
migrations/versions/: 28e5c5539122_nullable_explanation.py  311e459e8905_enhance_answers.py  380cb327560e_init.py  5657c99d2b3c_add_user_task_config.py  6e29df240b36_add_group_id_to_user_answers.py  a92611f90877_big_answer.py  bcb5a296c081_enhance_categories.py  c4f2a8b91d3e_add_user_stats_tables.py  e1b118af820c_increase_answer_column_length.py
src/: main.py
src/app/: exceptions.py
src/bot/: __init__.py  bot_app.py
tests/: conftest.py  test_enums.py  test_exceptions.py  test_models.py
tests/bot/: conftest.py  test_error_middleware.py  test_keyboards.py  test_message_manager.py  test_rich_api.py  test_task_handler_rich.py  test_task_helpers.py
tests/processors/: test_multi_exercise.py  test_processors.py  test_task_13_view.py  test_task_14_view.py  test_task_15_view.py  test_task_16_view.py  test_task_17_20_view.py  test_task_1_view.py  test_task_21_view.py  test_task_22_view.py  test_task_23_24_view.py  test_task_25_view.py  test_task_26_view.py  test_task_2_view.py  test_task_3_view.py  test_task_4_view.py  test_task_5_view.py  test_task_6_view.py  test_task_7_view.py  test_task_8_view.py  test_task_9_12_view.py
tests/rendering/: test_rich_renderer.py  test_rich_renderer_details.py  (+1 more)
(+211 files in other folders)
